# cloudwatch-logs-url-python

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
aws_cloudwatch_logs_url/: __init__.py  aws_cloudwatch_logs_url.py
tests/unit/: test_aws_cloudwatch_logs_url.py
